--- a/localizator/src/assets/css/materialize.css
+++ b/localizator/src/assets/css/materialize.css
@@ -3505,7 +3505,7 @@ span.badge.new {
 }
 
 span.badge.new:after {
-  content: " new";
+  content: "";
 }
 
 span.badge[data-badge-caption]::after {
