--- a/localizator/src/app/components/center/center.component.html
+++ b/localizator/src/app/components/center/center.component.html
@@ -81,11 +81,9 @@
                     </div>
                 </div>
             </div>
-            <!--breadcrumbs end-->
-            <!--start container-->
             <div class="container">
-                <div class="section">
-                    <router-outlet class="animated fadeInUp"></router-outlet>
+                <div class="section" [@routerTransition]="prepareRoute(outlet)">
+                    <router-outlet #outlet="outlet"></router-outlet>
                 </div>
             </div>
         </section>
