--- a/localizator/src/app/comun/bus/bus.component.html
+++ b/localizator/src/app/comun/bus/bus.component.html
@@ -16,7 +16,7 @@
         <span class="spacer-right"></span>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="code" multiTemplateDataRows matSortDisableClear matSortDirection="desc">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="code" matSortDisableClear matSortDirection="desc">
             <ng-container matColumnDef="seleccionado">
                 <th mat-header-cell *matHeaderCellDef>
                     <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -31,14 +31,18 @@
                     </mat-checkbox>
                 </td>
             </ng-container>
+            <ng-container matColumnDef="index">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> No.</th>
+                <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+            </ng-container>
 
             <ng-container matColumnDef="code">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Codigo</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Código</th>
                 <td mat-cell *matCellDef="let element"> {{element.code}}</td>
             </ng-container>
 
             <ng-container matColumnDef="number">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Numero</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Número</th>
                 <td mat-cell *matCellDef="let element">
                     {{element.number}}
                 </td>
