--- a/localizator/src/app/comun/place/place.component.html
+++ b/localizator/src/app/comun/place/place.component.html
@@ -14,7 +14,7 @@
         <span class="spacer-right"></span>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" multiTemplateDataRows matSortDisableClear matSortDirection="desc">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDisableClear matSortDirection="desc">
             <ng-container matColumnDef="seleccionado">
                 <th mat-header-cell *matHeaderCellDef>
                     <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -32,7 +32,7 @@
 
             <ng-container matColumnDef="index">
                 <th mat-header-cell *matHeaderCellDef> No.</th>
-                <td mat-cell *matCellDef="let element">{{showIndex(element, i)}}</td>
+                <td mat-cell *matCellDef="let element;let i = index">{{i+1}}</td>
             </ng-container>
 
             <ng-container matColumnDef="name">
