--- a/localizator/src/app/components/login/login.component.html
+++ b/localizator/src/app/components/login/login.component.html
@@ -3,15 +3,15 @@
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 </div>
-<div id="login-page" class="row" style="width: 400px;margin:auto;padding-top: 10%">
+<div id="login-page" class="row" style="width: 400px;margin:auto;padding-top: 6%">
     <div class="frente" [style.display]="isLoading ? 'block' : 'none'"></div>
     <div class="col s12 z-depth-4 card-panel disabled">
         <mat-progress-bar mode="indeterminate" class="progreso" [style.display]="isLoading ? 'block' : 'none'"></mat-progress-bar>
         <form class="login-form" [formGroup]="form" (submit)="iniciarSesion()" style="padding-top: 10%" [attr.disabled]="isLoading">
             <div class="row">
                 <div class="input-field col s12 center" style="text-align: center">
-                    <img src="assets/images/logo/login-logo.png" alt="" class="circle responsive-img valign profile-image-login">
-                    <p class="center login-form-text" style="text-align: center">Sistema para el control de buses</p>
+                    <img src="assets/images/logo/logo.jpg" alt="" class="circle responsive-img valign profile-image-login" style="width: 150px;height: 150px">
+                    <p class="center login-form-text" style="text-align: center;margin-top: 30px">Sistema para el control de buses</p>
                 </div>
             </div>
             <div class="row margin">
