--- a/localizator/src/app/components/login/login.component.html
+++ b/localizator/src/app/components/login/login.component.html
@@ -12,6 +12,7 @@
                 <div class="input-field col s12 center" style="text-align: center">
                     <img src="assets/images/logo/logo.jpg" alt="" class="circle responsive-img valign profile-image-login" style="width: 150px;height: 150px">
                     <p class="center login-form-text" style="text-align: center;margin-top: 30px">Sistema para el control de buses</p>
+                    <p class="center login-form-text" style="text-align: center">Iniciar Sesion</p>
                 </div>
             </div>
             <div class="row margin">
