--- a/localizator/src/app/admin/usuario/usuario-window/usuario-window.component.html
+++ b/localizator/src/app/admin/usuario/usuario-window/usuario-window.component.html
@@ -6,42 +6,42 @@
         <hr>
     </h1>
     <div mat-dialog-content style="min-height: 100%;">
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <input matInput placeholder="Nombre" formControlName="name">
             <mat-error *ngIf="form.controls['name'].errors?.required">Debe insertar el nombre de la persona</mat-error>
         </mat-form-field>
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <input matInput placeholder="Apellidos" formControlName="lastname">
             <mat-error *ngIf="form.controls['lastname'].errors?.required">Debe insertar los apellidos de la persona</mat-error>
         </mat-form-field>
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <input matInput placeholder="Correo del Usuario" formControlName="email">
             <mat-error *ngIf="form.controls['email'].errors?.required">Debe insertar el correo del usuario</mat-error>
         </mat-form-field>
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <input matInput placeholder="Nombre de Usuario" formControlName="username">
             <mat-error *ngIf="form.controls['username'].errors?.required">Debe insertar el nombre de usuario</mat-error>
         </mat-form-field>
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <mat-select matInput placeholder="Seleccione el rol" formControlName="rol" [compareWith]="compararRoles">
                 <mat-option *ngFor="let rol of roles" [value]="rol">{{rol.name}}</mat-option>
             </mat-select>
             <mat-error *ngIf="form.controls['rol'].errors?.required">Debe seleccionar el rol del usuario</mat-error>
         </mat-form-field>
         <mat-slide-toggle formControlName="activated">{{form.controls['activated'].value?'Activo':'Desactivado'}}</mat-slide-toggle>
-        <mat-form-field class="full-width">
+        <mat-form-field class="middle-width">
             <input matInput type="password" placeholder="Contraseña del Usuario" formControlName="password">
             <mat-error *ngIf="form.controls['password'].errors?.required">Debe introducir la contraseña del usuario</mat-error>
             <mat-error *ngIf="form.controls['password'].errors?.noigual">Las contrasenas no coinciden</mat-error>
         </mat-form-field>
-        <div>
-            <password-lenght [passwordToCheck]="form.controls['password'].value"></password-lenght>
-        </div>
-        <mat-form-field class="full-width" style="position: relative;top: -20px;">
+        <mat-form-field class="middle-width">
             <input matInput type="password" placeholder="Repetir Contraseña" formControlName="passwordRepeat">
             <mat-error *ngIf="form.controls['passwordRepeat'].errors?.required">Debe repetir la contraseña del usuario</mat-error>
             <mat-error *ngIf="form.controls['passwordRepeat'].errors?.noigual">Las contrasenas no coinciden</mat-error>
         </mat-form-field>
+        <div>
+            <password-lenght [passwordToCheck]="form.controls['password'].value"></password-lenght>
+        </div>
     </div>
     <div mat-dialog-actions class="boton-theme">
         <span class="spacer"></span>
