--- a/localizator/src/app/app.component.html
+++ b/localizator/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<div style="position: fixed;bottom: 0px;background-color: #1b5e20;height: 150px;width: 100%;z-index: 100"></div>
+<perfect-scrollbar [config]="config">
+    <router-outlet></router-outlet>
+    <div style="position: fixed;bottom: 0px;background-color: #1b5e20;height: 150px;width: 100%;z-index: 100"></div>
+</perfect-scrollbar>
