--- a/localizator/src/app/comun/bus/bus.component.html
+++ b/localizator/src/app/comun/bus/bus.component.html
@@ -35,20 +35,25 @@
             </ng-container>
 
             <ng-container matColumnDef="code">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Código</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'bus.code'|translate}}</th>
                 <td mat-cell *matCellDef="let element"> {{element.code}}</td>
             </ng-container>
 
             <ng-container matColumnDef="number">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Número</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'bus.number'|translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     {{element.number}}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="siteNumber">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Cantidad de Asientos</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'bus.siteCount'|translate}}</th>
                 <td mat-cell *matCellDef="let element"> {{element.siteNumber}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'bus.company'|translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.company|company}}</td>
             </ng-container>
 
             <ng-container matColumnDef="acciones" stickyEnd>
