--- a/localizator/src/app/admin/usuario/usuario.component.html
+++ b/localizator/src/app/admin/usuario/usuario.component.html
@@ -52,6 +52,11 @@
                 <td mat-cell *matCellDef="let element"> {{element.email}}</td>
             </ng-container>
 
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef class="ajustado"> {{'usuario.company'|translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.companies|companies}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="rol">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header="rol.name" class="ajustado"> {{'usuario.role'|translate}}</th>
                 <td mat-cell *matCellDef="let element"> {{element.rol|rol}}</td>
