--- a/localizator/src/app/components/user-menu/user-menu.component.html
+++ b/localizator/src/app/components/user-menu/user-menu.component.html
@@ -1,15 +1,15 @@
 <div>
-    <a class="dropdown-item" routerLink="/notification">
+    <a class="dropdown-item" routerLink="/user/notification">
         <i class="material-icons icon">email</i>
         <span class="title">Inbox</span>
         <span class="tag tag-pill tag-raised tag-danger tag-xs">New</span>
     </a>
-    <a class="dropdown-item" routerLink="/notification">
+    <a class="dropdown-item" routerLink="/user/notification">
         <i class="material-icons icon">grade</i>
         <span class="title">{{'notifications'|translate}}</span>
-        <span class="tag tag-outline-primary tag-rounded tag-xs">5</span>
+        <span class="tag tag-outline-primary tag-rounded tag-xs">{{cantidadNotificaciones|async}}</span>
     </a>
-    <a class="dropdown-item" routerLink="/user-profile">
+    <a class="dropdown-item" routerLink="/user/profile">
         <i class="material-icons icon">settings</i>
         <span class="title">{{'userprofile'|translate}}</span>
     </a>
