--- a/localizator/src/app/comun/route/route.component.html
+++ b/localizator/src/app/comun/route/route.component.html
@@ -71,7 +71,7 @@
                     <div class="element-detail"
                          [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
                         <div class="element-description">
-                            <span class="element-description-attribution">{{element.code}}</span>
+                            <span class="element-description-attribution">Lugares Intermedios: {{createText(element.places)}}</span>
                         </div>
                     </div>
                 </td>
