--- a/localizator/src/app/admin/company/company.component.html
+++ b/localizator/src/app/admin/company/company.component.html
@@ -44,6 +44,11 @@
                 <td mat-cell *matCellDef="let element"> {{element.busCount}}</td>
             </ng-container>
 
+            <ng-container matColumnDef="canceled">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'company.canceled'|translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.canceled?'Si':'No'}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="acciones" stickyEnd>
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;">{{'actions'|translate}}</th>
                 <td mat-cell *matCellDef="let element" align="center" class="acciones table-actions-theme">
