--- a/localizator/src/app/admin/usuario/usuario-window/usuario-window.component.html
+++ b/localizator/src/app/admin/usuario/usuario-window/usuario-window.component.html
@@ -28,7 +28,12 @@
             </mat-select>
             <mat-error *ngIf="form.controls['rol'].errors?.required">Debe seleccionar el rol del usuario</mat-error>
         </mat-form-field>
-        <mat-slide-toggle formControlName="activated">{{form.controls['activated'].value?'Activo':'Desactivado'}}</mat-slide-toggle>
+        <mat-form-field class="middle-width">
+            <mat-select matInput placeholder="Seleccione la empresa" formControlName="company" [compareWith]="compararCompanies">
+                <mat-option *ngFor="let company of companies" [value]="company">{{company.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.controls['company'].hasError('required')">Debe seleccionar la empresa del usuario</mat-error>
+        </mat-form-field>
         <mat-form-field class="middle-width">
             <input matInput type="password" placeholder="Contraseña del Usuario" formControlName="password">
             <mat-error *ngIf="form.controls['password'].errors?.required">Debe introducir la contraseña del usuario</mat-error>
@@ -39,8 +44,11 @@
             <mat-error *ngIf="form.controls['passwordRepeat'].errors?.required">Debe repetir la contraseña del usuario</mat-error>
             <mat-error *ngIf="form.controls['passwordRepeat'].errors?.noigual">Las contrasenas no coinciden</mat-error>
         </mat-form-field>
-        <div>
-            <password-lenght [passwordToCheck]="form.controls['password'].value"></password-lenght>
+        <div class="row">
+            <div class="col-sm-6" style="margin-top: 10px">
+                <password-lenght [passwordToCheck]="form.controls['password'].value"></password-lenght>
+            </div>
+            <mat-slide-toggle class="col-sm-6" formControlName="activated">{{form.controls['activated'].value?'Activo':'Desactivado'}}</mat-slide-toggle>
         </div>
     </div>
     <div mat-dialog-actions class="boton-theme">
