--- a/localizator/src/app/comun/bus/bus.component.html
+++ b/localizator/src/app/comun/bus/bus.component.html
@@ -52,7 +52,7 @@
             </ng-container>
 
             <ng-container matColumnDef="company">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'bus.company'|translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="company.name" class="ajustado"> {{'bus.company'|translate}}</th>
                 <td mat-cell *matCellDef="let element"> {{element.company|company}}</td>
             </ng-container>
 
