--- a/localizator/src/app/comun/place/place.component.html
+++ b/localizator/src/app/comun/place/place.component.html
@@ -54,7 +54,7 @@
                 </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index;"></tr>
         </table>
     </mat-card-content>
