--- a/localizator/src/app/comun/travel/travel-window/travel-window.component.html
+++ b/localizator/src/app/comun/travel/travel-window/travel-window.component.html
@@ -144,24 +144,28 @@
                         <ng-container matColumnDef="name">
                             <th mat-header-cell *matHeaderCellDef> Nombre</th>
                             <td mat-cell *matCellDef="let element"> {{element.passenger.name}}</td>
+                            <td mat-footer-cell *matFooterCellDef> Total </td>
                         </ng-container>
 
                         <!-- Name Column -->
                         <ng-container matColumnDef="lastname">
                             <th mat-header-cell *matHeaderCellDef> Apellidos</th>
                             <td mat-cell *matCellDef="let element"> {{element.passenger.lastname}}</td>
+                            <td mat-footer-cell *matFooterCellDef>{{getTotal()}}</td>
                         </ng-container>
 
                         <!-- Weight Column -->
                         <ng-container matColumnDef="dni">
                             <th mat-header-cell *matHeaderCellDef> DNI</th>
                             <td mat-cell *matCellDef="let element"> {{element.passenger.dni}}</td>
+                            <td mat-footer-cell *matFooterCellDef></td>
                         </ng-container>
 
                         <!-- Symbol Column -->
                         <ng-container matColumnDef="place">
                             <th mat-header-cell *matHeaderCellDef> Lugar</th>
                             <td mat-cell *matCellDef="let element"> {{element.place|place}}</td>
+                            <td mat-footer-cell *matFooterCellDef></td>
                         </ng-container>
                         <!-- Symbol Column -->
                         <ng-container matColumnDef="acciones" stickyEnd>
@@ -171,10 +175,12 @@
                                     <mat-icon>mode_edit</mat-icon>
                                 </button>
                             </td>
+                            <td mat-footer-cell *matFooterCellDef></td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                        <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
                     </table>
                 </div>
             </form>
