--- a/localizator/src/app/mensaje/confirm.message.html
+++ b/localizator/src/app/mensaje/confirm.message.html
@@ -1,12 +1,16 @@
 <h6 mat-dialog-title>Confirmar Eliminar</h6>
+<hr style="position: relative;top: -10px;background-color: gray;">
 <div mat-dialog-content>
     <h1 style="font-size: 16px;" [innerHtml]="data.mensaje"></h1>
 </div>
+<hr>
 <div mat-dialog-actions align="center" class="boton-theme">
     <button mat-raised-button cdkFocusInitial (click)="confirmar(true)" color="primary">
-            <mat-icon>check_circle</mat-icon> Aceptar
-        </button>
+        <mat-icon>check_circle</mat-icon>
+        Aceptar
+    </button>
     <button mat-raised-button (click)="confirmar(false)" color="warn">
-            <mat-icon>cancel</mat-icon> Cancelar
+        <mat-icon>cancel</mat-icon>
+        Cancelar
     </button>
 </div>
