--- a/localizator/src/app/mensaje/error.message.html
+++ b/localizator/src/app/mensaje/error.message.html
@@ -7,7 +7,7 @@
     <hr>
 </h1>
 <div mat-dialog-content class="contenido-alineado">
-    <h6 mat-dialog-content>{{data.mensaje}}</h6>
+    <h6 mat-dialog-content style="text-align: center">{{data.mensaje}}</h6>
 </div>
 <div mat-dialog-actions align="center">
     <span class="example-spacer"></span>
